#79 - initial commit for upgrading to java 14